this version removes the need to include proprietary file idl_export.h At the expense of using another notation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -278,15 +278,17 @@ else(PYTHON_MODULE)
 endif(PYTHON_MODULE)
 
 #permit gdl.exe to export its symbols, necessary for linkimage and DLM
-if (NOT APPLE AND NOT OSX AND NOT MINGW)
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--export-dynamic")
-endif()
-if (APPLE OR OSX )
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fvisibility=protected") #-exported_symbols_list ${EXPORTED_SYMBOLS_LIST}")
-endif()
-if (MINGW )
-#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--export-all-symbols")
-endif()
+set (CMAKE_SHARED_LIBRARY_ENABLE_EXPORTS )
+
+### if (NOT APPLE AND NOT OSX AND NOT MINGW)
+###     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--export-dynamic")
+### endif()
+### if (APPLE OR OSX )
+###     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fvisibility=protected") #-exported_symbols_list ${EXPORTED_SYMBOLS_LIST}")
+### endif()
+### if (MINGW )
+###   #set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--export-all-symbols")
+### endif()
 
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/src/pro/ DESTINATION ${CMAKE_INSTALL_PREFIX}/${GDL_DATA_DIR}/lib
 	PATTERN CVS EXCLUDE
