moved back 'brent' (aka POWELL) to src, as 'native' DLMs in C++ show problems (well-known problems related to templates etc). Native DLMs may not be such a good idea after all.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -92,7 +92,7 @@ getfmtast.cpp
 graphicsdevice.cpp
 basic_pro.cpp
 basic_pro_jmg.cpp
-# brent.cpp #as DLM test 
+brent.cpp #as DLM test 
 grib.cpp
 gsl_fun.cpp
 gsl_matrix.cpp
