--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -92,7 +92,7 @@ getfmtast.cpp
 graphicsdevice.cpp
 basic_pro.cpp
 basic_pro_jmg.cpp
-# brent.cpp #as DLM test 
+brent.cpp #as DLM test 
 grib.cpp
 gsl_fun.cpp
 gsl_matrix.cpp
@@ -231,8 +231,14 @@ if(PYTHON_MODULE) #GDL.so
 	SET_TARGET_PROPERTIES(gdl PROPERTIES NO_SONAME TRUE)
         SET_TARGET_PROPERTIES(gdl PROPERTIES SUFFIX ".so") # e.g. Mac defaults to .dylib which is not looked for by Python
 else(PYTHON_MODULE) #GDL.so
+## should permit gdl (exe) to export its symbols, necessary for linkimage and DLM
+## BUT DOES NOT WORK LIKE THAT!!
+##    set (CMAKE_SHARED_LIBRARY_ENABLE_EXPORTS true)
 	set(SOURCES ${SOURCES} gdl.cpp)
 	add_executable(gdl ${SOURCES})
+## use this in conjunction with -fvisibility=hidden below, but complicated to make work.
+#   set_target_properties(gdl PROPERTIES CXX_VISIBILITY_PRESET hidden)
+#   set_target_properties(gdl PROPERTIES C_VISIBILITY_PRESET hidden)
 endif(PYTHON_MODULE)
 
 if(USE_OPENMP)
@@ -279,7 +285,7 @@ endif(PYTHON_MODULE)
 
 
 if (NOT APPLE AND NOT OSX AND NOT MINGW)
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--export-dynamic")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--export-dynamic") # -fvisibility=hidden 
 endif()
 if (APPLE OR OSX )
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fvisibility=protected") #-exported_symbols_list ${EXPORTED_SYMBOLS_LIST}")
