following #2117 as proposed by @astrosega, use the faddeeva package to compute ERF and others, that make GDL support COMPLEX values in these cases. New errorfunctions.cpp removes a dependency to GSL. Also, took the opportunity to add the ERFI, DAWSON and FADDEEVA functions in the list of GDL functions. Note the use of function pointers to simplify code.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -57,8 +57,10 @@ dstructgdl.cpp
 dvar.cpp
 eigenvalues_solvers.cpp
 envt.cpp
+errorfunctions.cpp
 extrat.cpp
 exists_fun.cpp
+faddeeva/Faddeeva.cc
 fftw.cpp
 file.cpp
 fmtnode.cpp
@@ -115,6 +117,7 @@ libinit.cpp
 libinit_ac.cpp
 libinit_cl.cpp
 libinit_gm.cpp
+libinit_errorfunctions.cpp
 libinit_jmg.cpp
 libinit_mes.cpp
 libinit_ng.cpp
