now src/pro/CMprocedures/ with MPFIT procedures are visibles in tests

--- a/testsuite/CMakeLists.txt
+++ b/testsuite/CMakeLists.txt
@@ -36,4 +36,4 @@ foreach(TEST ${TESTS})
 endforeach(TEST TESTS)
 
 set_tests_properties(${TESTS} PROPERTIES SKIP_RETURN_CODE 77 TIMEOUT 3600) # autoconf's setting
-set_tests_properties(${TESTS} PROPERTIES ENVIRONMENT "LC_COLLATE=C;GDL_PATH=${BASE_SOURCE}/testsuite/${PATH_SEP}${BASE_SOURCE}/src/pro/;GDL_STARTUP=;IDL_STARTUP=")
+set_tests_properties(${TESTS} PROPERTIES ENVIRONMENT "LC_COLLATE=C;GDL_PATH=${BASE_SOURCE}/testsuite/${PATH_SEP}${BASE_SOURCE}/src/pro/${PATH_SEP}${BASE_SOURCE}/src/pro/CMprocedures/;GDL_STARTUP=;IDL_STARTUP=")
