--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,9 +45,9 @@ jobs:
       id: set-matrix-others
       run: |
         if [[ '${{ github.event_name }}' == "schedule" || '${{ github.event.inputs.type }}' == "release" || '${{ github.ref }}' == "refs/tags/v"* ]]; then 
-            matrix="{os: ['ubuntu-22.04', 'macos-15-intel', 'macos-15'], deps: ['standard', 'headless'], configuration: ['Release']}"
+            matrix="{os: ['ubuntu-22.04', 'ubuntu-22.04-arm', 'macos-15-intel', 'macos-15'], deps: ['standard', 'headless'], configuration: ['Release']}"
         else
-            matrix="{os: ['ubuntu-22.04', 'macos-15-intel', 'macos-15'], deps: ['debug'], configuration: ['Debug']}"
+            matrix="{os: ['ubuntu-22.04', 'ubuntu-22.04-arm', 'macos-15-intel', 'macos-15'], deps: ['debug'], configuration: ['Debug']}"
         fi
         echo "matrix_others=$matrix" >> $GITHUB_OUTPUT
     - name: Remove Release (scheduled build only)
