extract FZ_ROOTS and IMSL_ZEROPOLY from gsl_fun.cpp and put into polynomial_roots.cpp. Now FZ_ROOTS can handle complex coeffs as input

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -162,6 +162,7 @@ plotting_windows.cpp
 plotting_xyouts.cpp
 plotting.cpp
 poly_2d.cpp
+polynomial_roots.cpp
 print.cpp
 print_tree.cpp
 prognode.cpp
